force-app/main/default/objects/Lead/fields/Non_Standard_Contract_Components__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Contract_Components__c</fullName>
    <label>Non Standard Contract Components</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Platform exclusivity</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Online Payment Doc</fullName>
            </value>
            <value>
                <fullName>Registration fee</fullName>
            </value>
            <value>
                <fullName>Renewal fee</fullName>
            </value>
            <value>
                <fullName>Pizza</fullName>
            </value>
            <value>
                <fullName>Sushi</fullName>
            </value>
            <value>
                <fullName>New Restaurant Info</fullName>
            </value>
            <value>
                <fullName>Ownership Change</fullName>
            </value>
            <value>
                <fullName>Premium Show Discount</fullName>
            </value>
            <value>
                <fullName>Cash before delivery</fullName>
            </value>
            <value>
                <fullName>Partial prepayment</fullName>
            </value>
            <value>
                <fullName>Settlement</fullName>
            </value>
            <value>
                <fullName>BladeT&amp;C</fullName>
            </value>
            <value>
                <fullName>Exclusive Special Offer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>