force-app/main/default/objects/Lead/fields/Number_of_Reviews__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Reviews__c</fullName>
    <description>Number of Reviews of the restaurant in different pages</description>
    <label>Number of Reviews</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>