force-app/main/default/objects/Lead/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description>this multi-picklist is to track whith which payment method the restaurant work (wants to work)</description>
    <label>Payment Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Mobile Credit Card Reader</fullName>
            </value>
            <value>
                <fullName>Mobile Electronic Cash Card Reader</fullName>
            </value>
            <value>
                <fullName>Online Payment</fullName>
            </value>
            <value>
                <fullName>OP - Mobile Electronic Cash Card Reader</fullName>
            </value>
            <value>
                <fullName>OP - Mobile Payment</fullName>
            </value>
            <value>
                <fullName>OP - Bank transfer</fullName>
            </value>
            <value>
                <fullName>Credit Card On Delivery</fullName>
            </value>
            <value>
                <fullName>K-NET</fullName>
            </value>
            <value>
                <fullName>Sodexo</fullName>
            </value>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>American Express</fullName>
            </value>
            <value>
                <fullName>Diners_Club</fullName>
                <label>Diners Club</label>
            </value>
            <value>
                <fullName>Matercard</fullName>
            </value>
            <value>
                <fullName>Bank Card (1 click payment is)</fullName>
            </value>
            <value>
                <fullName>Bank Card</fullName>
            </value>
            <value>
                <fullName>OTP SZÉP Card</fullName>
            </value>
            <value>
                <fullName>MKB SZÉP Card</fullName>
            </value>
            <value>
                <fullName>KH SZÉP Card</fullName>
            </value>
            <value>
                <fullName>Erzsébet Card Meal Pocket</fullName>
            </value>
            <value>
                <fullName>Erzsébet Card Gift Pocket</fullName>
            </value>
            <value>
                <fullName>Erzsébet Voucher</fullName>
            </value>
            <value>
                <fullName>Meal Vouchers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>