force-app/main/default/objects/Lead/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Platform</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FoodOnClick</fullName>
            </value>
            <value>
                <fullName>Talabat</fullName>
            </value>
            <value>
                <fullName>Mat24</fullName>
            </value>
            <value>
                <fullName>OnlinePizza</fullName>
            </value>
            <value>
                <fullName>Butakhae</fullName>
            </value>
            <value>
                <fullName>BDT</fullName>
            </value>
            <value>
                <fullName>Yogiyo</fullName>
            </value>
            <value>
                <fullName>PizzaPortal</fullName>
            </value>
            <value>
                <fullName>PizzaOnline</fullName>
            </value>
            <value>
                <fullName>Mjam</fullName>
            </value>
            <value>
                <fullName>Netkellner</fullName>
            </value>
            <value>
                <fullName>Mjam App</fullName>
            </value>
            <value>
                <fullName>hungryhouse</fullName>
            </value>
            <value>
                <fullName>domicilios.com</fullName>
            </value>
            <value>
                <fullName>adomicilioYa.com</fullName>
            </value>
            <value>
                <fullName>clickdelivery.com.pe</fullName>
            </value>
            <value>
                <fullName>limadelivery.com</fullName>
            </value>
            <value>
                <fullName>Foodora</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>