force-app/main/default/objects/Lead/fields/Recommended_Tariff__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Tariff__c</fullName>
    <description>BI Information added from Backend (UK)</description>
    <label>Recommended Tariff</label>
    <type>TextArea</type>
</CustomField>