force-app/main/default/objects/Lead/fields/Restaurant_Category__c.field-meta.xml
<CustomField>
    <fullName>Restaurant_Category__c</fullName>
    <description>Clickdelivery categories in website, mapped to account field.</description>
    <label>Restaurant Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>yapaYa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>