force-app/main/default/objects/Lead/fields/Restaurant_Name__c.field-meta.xml
<CustomField>
    <fullName>Restaurant_Name__c</fullName>
    <description>this field is used to store the restaurant name</description>
    <label>Restaurant Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>