force-app/main/default/objects/Lead/fields/Review_Source__c.field-meta.xml
<CustomField>
    <fullName>Review_Source__c</fullName>
    <description>SP-613 - Lead Scoring Adjustments</description>
    <label>Review Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yelp</fullName>
            </value>
            <value>
                <fullName>Yellowpages</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Zomato</fullName>
            </value>
            <value>
                <fullName>Tripadvisor</fullName>
            </value>
            <value>
                <fullName>Lieferservice.at</fullName>
            </value>
            <value>
                <fullName>Restauranttester.at</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Civico</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>Restorando</fullName>
            </value>
            <value>
                <fullName>DeGusta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>