force-app/main/default/objects/Lead/fields/Sales_Pitch__c.field-meta.xml
<CustomField>
    <fullName>Sales_Pitch__c</fullName>
    <label>Sales Pitch</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>