force-app/main/default/objects/Lead/fields/Social_Media_URL__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_URL__c</fullName>
    <inlineHelpText>Vendor&apos;s page: Facebook, Instagram or Twitter etc</inlineHelpText>
    <label>Social Media URL</label>
    <type>Url</type>
</CustomField>