force-app/main/default/objects/Lead/fields/Special_Characteristics__c.field-meta.xml
<CustomField>
    <fullName>Special_Characteristics__c</fullName>
    <label>Special Characteristics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>0/0 Partner</fullName>
            </value>
            <value>
                <fullName>24 Hours</fullName>
            </value>
            <value>
                <fullName>Finest</fullName>
            </value>
            <value>
                <fullName>Hawker Legend</fullName>
            </value>
            <value>
                <fullName>Kiosk</fullName>
            </value>
            <value>
                <fullName>Late Night Delivery</fullName>
            </value>
            <value>
                <fullName>Michelin Guide</fullName>
            </value>
            <value>
                <fullName>Shiok</fullName>
            </value>
            <value>
                <fullName>Stall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>