force-app/main/default/objects/Lead/fields/Subdistrict__c.field-meta.xml
<CustomField>
    <fullName>Subdistrict__c</fullName>
    <description>Korea Address detail</description>
    <label>Subdistrict</label>
    <length>255</length>
    <type>Text</type>
</CustomField>