force-app/main/default/objects/Lead/fields/Takeaway__c.field-meta.xml
<CustomField>
    <fullName>Takeaway__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Takeaway</label>
    <type>Checkbox</type>
</CustomField>