force-app/main/default/objects/Lead/fields/Target_Partner__c.field-meta.xml
<CustomField>
    <fullName>Target_Partner__c</fullName>
    <label>Target Partner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Basic Lead</fullName>
            </value>
            <value>
                <fullName>Target Partner</fullName>
            </value>
            <value>
                <fullName>SCTP</fullName>
            </value>
            <value>
                <fullName>Dreamlist</fullName>
            </value>
            <value>
                <fullName>Gap Finder Target Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>