force-app/main/default/objects/Lead/fields/Tariff_Name__c.field-meta.xml
<CustomField>
    <fullName>Tariff_Name__c</fullName>
    <label>Tariff Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>