force-app/main/default/objects/Lead/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Franchise</fullName>
            </value>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
                <default>true</default>
                <label>Branch</label>
            </value>
            <value>
                <fullName>Branch - Main</fullName>
            </value>
            <value>
                <fullName>Branch - Kitchen Restaurant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>