force-app/main/default/objects/Lead/fields/Unique_Code__c.field-meta.xml
<CustomField>
    <fullName>Unique_Code__c</fullName>
    <description>This field is to identify whether it is the same owner with different Company Number</description>
    <label>Unique Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>