force-app/main/default/objects/Lead/fields/Vendor_Grade__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Grade__c</fullName>
    <description>SP-601 - Values for global Vendor Grade based on Vendor Score</description>
    <label>Vendor Grade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AAA</fullName>
            </value>
            <value>
                <fullName>AA</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>