force-app/main/default/objects/Lead/fields/X3rd_Party_Delivery_Service__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Delivery_Service__c</fullName>
    <description>Third party delivery service partners for Australia Restaurants</description>
    <label>3rd Party Delivery Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cuisine Courier</fullName>
            </value>
            <value>
                <fullName>Hungerline</fullName>
            </value>
            <value>
                <fullName>One Hour Delivery</fullName>
            </value>
            <value>
                <fullName>Quiqup</fullName>
            </value>
            <value>
                <fullName>Sherpa</fullName>
            </value>
            <value>
                <fullName>Suppertime</fullName>
            </value>
            <value>
                <fullName>Swift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>