force-app/main/default/objects/Lead/recordTypes/AT_Lead.recordType-meta.xml
<RecordType>
    <fullName>AT_Lead</fullName>
    <active>true</active>
    <businessProcess>Austria Lead Process</businessProcess>
    <label>AT Lead</label>
</RecordType>