force-app/main/default/objects/Lead/recordTypes/CD_Lead.recordType-meta.xml
<RecordType>
    <fullName>CD_Lead</fullName>
    <active>true</active>
    <businessProcess>CD Lead Process</businessProcess>
    <description>Click Delivery Lead Process</description>
    <label>CD Lead</label>
</RecordType>