force-app/main/default/objects/Lead/recordTypes/CZ_Lead.recordType-meta.xml
<RecordType>
    <fullName>CZ_Lead</fullName>
    <active>true</active>
    <businessProcess>Global Lead Process</businessProcess>
    <description>Czech Republic Lead</description>
    <label>CZ Lead</label>
</RecordType>