force-app/main/default/objects/Lead/recordTypes/DE_Lead.recordType-meta.xml
<RecordType>
    <fullName>DE_Lead</fullName>
    <active>true</active>
    <businessProcess>DE Lead Process</businessProcess>
    <label>DE Lead</label>
</RecordType>