force-app/main/default/objects/Lead/recordTypes/DH_AU_Lead.recordType-meta.xml
<RecordType>
    <fullName>DH_AU_Lead</fullName>
    <active>true</active>
    <businessProcess>DH AU Lead Process</businessProcess>
    <label>DH AU Lead</label>
</RecordType>