force-app/main/default/objects/Lead/recordTypes/FI_Lead.recordType-meta.xml
<RecordType>
    <fullName>FI_Lead</fullName>
    <active>true</active>
    <businessProcess>Finland Lead Process</businessProcess>
    <label>FI Lead</label>
</RecordType>