force-app/main/default/objects/Lead/recordTypes/FP_Lead.recordType-meta.xml
<RecordType>
    <fullName>FP_Lead</fullName>
    <active>true</active>
    <businessProcess>Global Lead Process</businessProcess>
    <description>Used for APAC Foodpanda countries.</description>
    <label>FP Lead</label>
</RecordType>