force-app/main/default/objects/Lead/recordTypes/HU_Lead.recordType-meta.xml
<RecordType>
    <fullName>HU_Lead</fullName>
    <active>true</active>
    <businessProcess>HU Lead Process</businessProcess>
    <description>Hungary Lead Process</description>
    <label>HU Lead</label>
</RecordType>