force-app/main/default/objects/Lead/recordTypes/PY_Lead.recordType-meta.xml
<RecordType>
    <fullName>PY_Lead</fullName>
    <active>true</active>
    <businessProcess>PY Lead Process</businessProcess>
    <description>PedidosYa Lead Process</description>
    <label>PY Lead</label>
</RecordType>