force-app/main/default/objects/Lead/recordTypes/SE_Lead.recordType-meta.xml
<RecordType>
    <fullName>SE_Lead</fullName>
    <active>true</active>
    <businessProcess>Sweden lead Process</businessProcess>
    <description>Sweden lead</description>
    <label>SE Lead</label>
</RecordType>