force-app/main/default/objects/Lead/recordTypes/Talabat_Lead.recordType-meta.xml
<RecordType>
    <fullName>Talabat_Lead</fullName>
    <active>true</active>
    <businessProcess>Talabat Lead Process</businessProcess>
    <description>Lead for Talabat</description>
    <label>Talabat Lead</label>
</RecordType>