force-app/main/default/objects/Lead/recordTypes/UK_Lead.recordType-meta.xml
<RecordType>
    <fullName>UK_Lead</fullName>
    <active>true</active>
    <businessProcess>UK Lead Process</businessProcess>
    <label>UK Lead</label>
</RecordType>