force-app/main/default/objects/Lead/recordTypes/Yogiyo_Lead.recordType-meta.xml
<RecordType>
    <fullName>Yogiyo_Lead</fullName>
    <active>true</active>
    <businessProcess>Yogiyo Lead Process</businessProcess>
    <description>Korea Lead Record Type</description>
    <label>Yogiyo Lead</label>
</RecordType>