force-app/main/default/objects/Lead/validationRules/CZ_Phone_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>CZ_Phone_Format</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &apos;CZ_Lead&apos;,
    OR(
        AND(
            NOT(ISBLANK(Phone)),
            NOT(REGEX(Phone, &quot;^([+]420|[+]421)[0-9]{9}$&quot;))
        ),
        AND(
            NOT(ISBLANK(MobilePhone)),
            NOT(REGEX(MobilePhone, &quot;^([+]420|[+]421)[0-9]{9}$&quot;))
        ),
        AND(
            NOT(ISBLANK(Other_Phone__c)),
            NOT(REGEX(Other_Phone__c, &quot;^([+]420|[+]421)[0-9]{9}$&quot;))
        )
    )
)</errorConditionFormula>
    <errorMessage>Phone should start with +420 or +421 and be followed by 9 digits, without spaces.</errorMessage>
</ValidationRule>